<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="8dip"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/sjsu_logo" />
        <TextView
            android:paddingTop="25dp"
            android:paddingLeft="10dp"
            android:layout_width="4000dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/app_logo"
            android:textColor="@color/white"
            android:text="@string/pdf_app_label"
            android:textSize="24dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/downloaded_by_started_service_urls"
        android:textSize="22sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">
      <TextView
          android:id="@+id/pdfText1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text1_label"
          android:textColor="@color/white"
          android:textSize="18sp"/>

        <TextView
            android:id="@+id/url1"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/pdfText1"
            android:textSize="18dp"
            android:text="@string/url1"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/pdfText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2_label"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/url2"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/pdfText2"
            android:textSize="18dp"
            android:text="@string/url2"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/pdfText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3_label"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/url3"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/pdfText3"
            android:textSize="18dp"
            android:text="@string/url3"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/btnStartDownload1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:text="@string/btn_download_label"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:onClick="startDownload1"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/downloaded_by_bounded_service_urls"
        android:textSize="22sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/pdfText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text4_label"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/url4"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/pdfText4"
            android:textSize="18dp"
            android:text="@string/url4"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/pdfText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text5_label"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/url5"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/pdfText5"
            android:textSize="18dp"
            android:text="@string/url5"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/btnStartDownload"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:text="@string/btn_download_label"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:onClick="startDownload2"/>
    </RelativeLayout>
</LinearLayout>
