<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="8dip">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/sjsu_logo" />
        <TextView
            android:paddingTop="25dp"
            android:paddingLeft="25dp"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_toRightOf="@id/app_logo"
            android:textColor="@color/white"
            android:text="@string/app_label"
            android:textSize="30dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_desc_label"
            android:textSize="15sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:text="@string/btn_services_label"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:onClick="download"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:text="@string/btn_close_label"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:onClick="closeApp"/>
    </RelativeLayout>
</LinearLayout>
